--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "data-warehouse-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon fastify start server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^2.22.0"
+    "@prisma/client": "^2.22.0",
+    "fastify": "^3.15.1",
+    "fastify-cli": "^2.10.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.7",
     "prisma": "^2.22.0"
   }
 }
