--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.22.0",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^8.2.0",
     "fastify": "^3.15.1",
-    "fastify-cli": "^2.10.0"
+    "fastify-cli": "^2.10.0",
+    "fastify-jwt": "^2.4.0",
+    "fastify-plugin": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
